# OpenGL-2D-Blackhole-Simulator

./: CMakeLists.txt  README.md  constants.h  main.cpp  physics.cpp  physics.h  ray.cpp  ray.h  rendering.cpp  rendering.h
